--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "babel-plugin-react-compiler": "^0.0.0-experimental-334f00b-20240725",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
